Align implementation with latest HIP changes
