# web3/src/main/java/org/hiero/mirror/web3/viewmodel/ContractCallRequest.java
@@ -2,9 +2,7 @@
 
 package org.hiero.mirror.web3.viewmodel;
 
-import com.fasterxml.jackson.annotation.JsonAlias;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonSetter;
 import com.fasterxml.jackson.annotation.Nulls;
@@ -58,11 +56,6 @@ public class ContractCallRequest {
 
     @PositiveOrZero
     private long value;
-
-    @Valid
-    @JsonInclude(JsonInclude.Include.NON_NULL)
-    @JsonAlias("tracer_config")
-    private TracerConfig tracerConfig;
 
     @AssertTrue(message = "must not be empty")
     private boolean hasFrom() {
